--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
+.body{
+    color: rgb(59, 87, 80);
+}
 .logo{
     text-align: center;
     font-size: 20px;
     font-weight: bolder;
     margin: 50px;
     font-family: Arial, Helvetica, sans-serif;
-    color: black;
+    
 }
 .title1{
     font-family: Arial, Helvetica, sans-serif;
@@ -12,7 +15,7 @@
     font-weight: bolder;
     text-align: center;
     margin: 50px;
-    color: black;
+    
 }
 .title2{
     font-family: Arial, Helvetica, sans-serif;
@@ -20,9 +23,12 @@
     font-weight: bolder;
     text-align: center;
     margin: 50px;
-    color: black;
+    
 }
-#siging-area{}
+/* email para cadastro */
+#siging-area{
+    
+}
 .siging-area .siging{
     font-size: medium;
     text-transform: uppercase;
@@ -34,10 +40,10 @@
 }
 .siging-area .button{
     border-radius: 3px;
-    width: 100px;
+    width: 150px;
     height: 40px;
-    color: white;
-    background-color: goldenrod;
+    color: rgb(59, 87, 80);
+    background-color: lightblue;
     font-weight: bolder;
 }
 .siging-area .input{
@@ -45,7 +51,10 @@
     width: 200px;
     height: 33px;
     box-shadow: none;
+    opacity: 40%;
 }
+
+/* barra de navegação */
 #menu ul {
     padding: 0PX;
     margin: 0PX;
@@ -58,21 +67,22 @@
   font-weight: bolder;
   justify-content: center;
   
-  
+
 }
 #menu ul li a {
     padding: 3px 10px;
     margin-left: 50px;
     margin-right: 50px;
     margin-top: 100px;
-    margin-bottom: 100px;
+    margin-bottom: 10px;
     display: inline-block;
 
     /* visual do link */
-    background-color:#EDEDED;
-    color: #333;
+    background-color: none;
+    color: rgb(59, 87, 80);
     text-decoration: none;
     border-bottom:3px solid #EDEDED;
+    font-size: 20px;
 }
 #menu ul li a:hover {
     background-color:#D6D6D6;
@@ -82,5 +92,77 @@
 nav{
     display: flex;
     justify-content: center;
+}
+    /*icones da segunda seção*/
+.icones{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: baseline;
+    margin-bottom: 100px;
+    margin-top: 100px;
+    font-family: Arial, Helvetica, sans-serif;
+
+}
+#coluna01{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-right: 200px;}
+
+#coluna02{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-right: 200px;}
+
+#coluna03{ 
+    display: flex;
+    flex-direction: column;
+    align-items: center;}
+
+
+ .fas {
+     font-size: 70px;
+     color: darkcyan;
  }
- 
+
+ /* terceira seção */
+ .sobre{
+     font-family: Arial, Helvetica, sans-serif;
+     font-size: x-large;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     margin-top: 100px;
+     margin-bottom: 100px;
+
+ }
+ #imagem{
+     position: relative;
+     left: 80px;
+     top: auto;
+     border: solid gold;
+     border-radius: 200px;
+ }
+ /* quarta seção */
+.sub{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: x-large;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
+.rodape{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bolder;
+    
+    
+}
