--- a/style.css
+++ b/style.css
@@ -1,13 +1,20 @@
 .body{
-    color: rgb(59, 87, 80);
-}
-.logo{
-    text-align: center;
-    font-size: 20px;
-    font-weight: bolder;
-    margin: 50px;
-    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(255, 255, 255);
+    background-image: url(./assets/black\ burger.jpg);
     
+}
+.header{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    text-align: center;
+    font-size: x-large;
+    font-weight: bolder;
+    font-family: Arial, Helvetica, sans-serif;
+    background-image: url(./assets/yellow.jpg);
+    color: rgb(0, 0, 0);
+    opacity: 90%;
+    border-radius: 100px;
 }
 .title1{
     font-family: Arial, Helvetica, sans-serif;
@@ -19,8 +26,8 @@
 }
 .title2{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: small;
-    font-weight: bolder;
+    font-size: medium;
+    font-weight: normal;
     text-align: center;
     margin: 50px;
     
@@ -39,19 +46,20 @@
     margin-top: 50px;
 }
 .siging-area .button{
-    border-radius: 3px;
+    border-radius: 100px;
     width: 150px;
     height: 40px;
-    color: rgb(59, 87, 80);
-    background-color: lightblue;
+    color: rgb(86, 87, 59);
+    background-color: rgb(255, 230, 0);
     font-weight: bolder;
 }
 .siging-area .input{
-    border-radius: 3px;
+    border: solid gold;
+    border-radius: 100px;
     width: 200px;
     height: 33px;
     box-shadow: none;
-    opacity: 40%;
+    opacity: 70%;
 }
 
 /* barra de navegação */
@@ -79,10 +87,10 @@
 
     /* visual do link */
     background-color: none;
-    color: rgb(59, 87, 80);
+    color: rgb(255, 255, 255);
     text-decoration: none;
     border-bottom:3px solid #EDEDED;
-    font-size: 20px;
+    font-size: 25px;
 }
 #menu ul li a:hover {
     background-color:#D6D6D6;
@@ -124,7 +132,7 @@ nav{
 
  .fas {
      font-size: 70px;
-     color: darkcyan;
+     color: rgb(250, 221, 125);
  }
 
  /* terceira seção */
@@ -134,15 +142,15 @@ nav{
      display: flex;
      align-items: center;
      justify-content: center;
-     margin-top: 100px;
-     margin-bottom: 100px;
+     margin-top: 200px;
+     margin-bottom: 200px;
 
  }
  #imagem{
      position: relative;
-     left: 80px;
+     left: -200px;
      top: auto;
-     border: solid gold;
+     border: solid gold 10px;
      border-radius: 200px;
  }
  /* quarta seção */
@@ -159,10 +167,25 @@ nav{
 
 .rodape{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bolder;
+    background-image: url(./assets/yellow.jpg);
+    border-radius: 100px;
+    color: black;
+    font-size: small;
+    padding: 0px;
     
-    
+}
+.icones02 {    
+    position: fixed;
+    bottom: 2%;
+    left: 95%; 
+    padding: 1%;
+    z-index: 10000000;
+    opacity: 65%;
+}
+.icones02 img:hover {
+    filter: invert(100%); 
 }
